# bevy_multiplayer_example

./: .gitignore  Cargo.toml  README.md
assets/levels/: level_3.json
assets/levels/blue/: default.json  level_2.json
catan/: .gitignore  Cargo.toml
catan/assets/levels/: level_3.json
catan/assets/levels/blue/: level_1.json  level_4.json
catan/src/: main_client.rs  main_server.rs
catan/src/camera/: client_camera.rs  mod.rs
catan/src/client/: mod.rs  systems.rs
catan/src/map/: client_map.rs  mod.rs  server_map.rs
catan/src/players/: client_players.rs  mod.rs  server_players.rs
catan/src/protocol/: mod.rs
catan/src/server/: mod.rs  systems.rs
src/camera/: mod.rs
src/client/: systems.rs
src/map/: client_map.rs  mod.rs
src/players/: server_players.rs
src/server/: mod.rs
