[package]
name = "catan"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/main_server.rs"

[[bin]]
name = "client"
path = "src/main_client.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.10.0" } # remove dynamic for release
bevy_interact_2d = {git = "https://github.com/SueHeir/bevy_interact_2d.git", version = "0.10.0"}
leafwing-input-manager = "0.9.0"
serde_json = "1.0.93"
serde = { version = "1.0.152", features = ["derive"] }
rand = "0.8.5"
bevy_quinnet = "0.4.0"   
bevy_easings = "0.10.0"


# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
